--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.71"
 crossbeam-channel = "0.5.8"
 log = "0.4.19"
+paste = "1.0.14"
 pnet = "0.33.0"
 pretty_env_logger = "0.5.0"
 smoltcp = { version = "0.10.0", default-features = false, features = [
