--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,12 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.71"
+argh = "0.1.10"
 crossbeam-channel = "0.5.8"
 log = "0.4.19"
 paste = "1.0.14"
 pretty_env_logger = "0.5.0"
+rand = "0.8.5"
 smoltcp = { version = "0.10.0", default-features = false, features = [
     "std",
     "log",
